devise users added and tests passing

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'About Us') %>
-<h1>About Us</h1>
+<% provide(:title, 'About us') %>
+<h1>About us</h1>
 <p>
  	Out shredding now. More to come on this when I return from the mountain. 
 </p>
