--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,16 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "Where to Ski", '#', id: "logo" %>
+      <%= link_to "Where to Ski", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home",    root_path %></li>
           <li><%= link_to "About",   about_path %></li>
-          <li><%= link_to "Sign in", signin_path %></li>
+          <% if user_signed_in? %> 
+            <li><%= link_to "Sign out", destroy_user_session_path, method: "delete" %></li>
+          <% else %> 
+            <li><%= link_to "Sign in", new_user_session_path %></li>
+          <% end %>
         </ul>
       </nav>
     </div>
