--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,1 +1,9 @@
-<%= render 'form' %>
+<ul class="nav nav-tabs" id="myTab">
+  <li class="active"><a href="#upload" data-toggle="tab">Upload</a></li>
+  <li><a href="#weblink" data-toggle="tab">Weblink</a></li>
+</ul>
+ 
+<div class="tab-content">
+  <div class="tab-pane active" id="upload"><%= render 'form_upload' %></div>
+  <div class="tab-pane" id="weblink"><%= render 'form_weblink' %></div>
+</div>
