--- a/app/views/photos/_form_upload.html.erb
+++ b/app/views/photos/_form_upload.html.erb
@@ -1,10 +1,15 @@
 <%= semantic_form_for ([@mountain, @photo]) do |f| %>
 	<%= f.semantic_errors :notice %>
 	<%= f.inputs do %>
+		<%= f.input :image %>
 		<%= f.input :name %>
- 		<%= f.input :image %>
-    <% end %>
-    <%= f.actions do %>
+ 		<% unless @mountain.id? %>
+ 			<%= f.input :mountain %>
+ 		<% end %>
+ 		<%= f.input :description, :input_html => { class: 'span6', rows: '3' }%>
+ 		<%= f.input :tag_list, as: :string %>
+  <% end %>
+  <%= f.actions do %>
 		<%= f.action :submit, :as => :button %>
  	<% end %> 
- <% end %> 
+<% end %> 
