--- a/app/views/photos/_form_weblink.html.erb
+++ b/app/views/photos/_form_weblink.html.erb
@@ -1,10 +1,15 @@
 <%= semantic_form_for ([@mountain, @photo]) do |f| %>
 	<%= f.semantic_errors :notice %>
 	<%= f.inputs do %>
-		<%= f.input :name %>
     <%= f.input :remote_image_url %>
-    <% end %>
-    <%= f.actions do %>
+ 		<%= f.input :name %>
+ 		<% unless @mountain.id? %>
+ 			<%= f.input :mountain %>
+ 		<% end %>
+    <%= f.input :description %>
+		<%= f.input :tag_list, as: :string %>
+  <% end %>
+  <%= f.actions do %>
 		<%= f.action :submit, :as => :button %>
  	<% end %> 
- <% end %> 
+<% end %> 
