added my_mountains model and in progress on voting buttons

--- a/app/views/mountains/show.html.erb
+++ b/app/views/mountains/show.html.erb
@@ -2,6 +2,8 @@
 <p>Mountain: <%= @mountain.name %></p>
 <p><%= link_to "Add a photo", new_mountain_photo_path(@mountain) %></p> 
 
+<p><%= render 'my_mountains_form' %></p>
+
 <p>Photos: </p>
 
 <ul>
