--- a/app/views/photos/_gnar_form.html.erb
+++ b/app/views/photos/_gnar_form.html.erb
@@ -1,3 +1,8 @@
 <div class="gnar_form">	
-	<%= render 'gnar' %> 
+	<% if @gnars.find_by_user_id(current_user.id) %>
+		<%= render 'ungnar' %> 
+	<% else %>
+		<%= render 'gnar' %> 
+	<% end %>
 </div>
+<div id="hint"><a href="#" data-toggle="tooltip" title="Give props to this photo and vote it up">What is Gnar?</a></div>
