--- a/app/views/mountains/_ive_been.html.erb
+++ b/app/views/mountains/_ive_been.html.erb
@@ -1,5 +1,7 @@
-<%= form_for @mountain.my_mountains.build do |f| %>
+<%= form_for @mountain.my_mountains.build, remote: true do |f| %>
 	<%= f.hidden_field :mountain_id %>
 	<%= f.hidden_field :type, :value => 1 %>
-	<%= f.submit "I've been here", class: "btn btn-large btn-primary" %>
+	<%= button_tag(type: 'submit', class: 'btn btn-mini') do %>
+		<i class="icon-ok icon-white"></i> I've Been Here
+	<% end %>
 <% end %>
