--- a/app/views/mountains/_undo_want_to_go.html.erb
+++ b/app/views/mountains/_undo_want_to_go.html.erb
@@ -1,3 +1,5 @@
-<%= form_for(@mountain.my_mountains.where("user_id = ? AND type = ?", current_user.id, 0).first, html: { method: :delete}) do |f| %>
-	<%= f.submit "Unclick - I want to go here", class: "btn btn-large btn-primary" %>
+<%= form_for(@mountain.my_mountains.where("user_id = ? AND type = ?", current_user.id, 0).first, html: { method: :delete}, remote: true) do |f| %>
+	<%= button_tag(type: 'submit', class: 'btn btn-warning btn-mini') do %>
+		<i class="icon-plane icon-white"></i> I Want to Go Here
+	<% end %> 
 <% end %>
