--- a/app/views/mountains/show.html.erb
+++ b/app/views/mountains/show.html.erb
@@ -5,10 +5,4 @@
 <p><%= render 'my_mountains_form' %></p>
 
 <p>Photos: </p>
-
-<ul>
-	<% @mountain.photos.each do |photo| %>
-		<%= link_to image_tag(photo.image_url(:thumb)), [@mountain, photo] %>
-		<li><%= link_to photo.name, [@mountain, photo] %></li>
-	<% end %>
-</ul>
+<%= render 'shared/pics' %>
