--- a/app/views/photos/_gnar_form.html.erb
+++ b/app/views/photos/_gnar_form.html.erb
@@ -1,8 +1,8 @@
 <div class="gnar_form">	
 	<% if @gnars.find_by_user_id(current_user.id) %>
-		<%= render 'ungnar' %> 
+		<%= render :partial => 'photos/ungnar' %> 
 	<% else %>
-		<%= render 'gnar' %> 
+		<%= render :partial => 'photos/gnar' %>
 	<% end %>
 </div>
-<div id="hint"><a href="#" data-toggle="tooltip" title="Give props to this photo and vote it up">What is Gnar?</a></div>
+<!-- <a href="#" class="gnar_describe" title="Give props to this photo and vote it up">What is Gnar?</a> -->
