--- a/app/views/mountains/_my_mountains_form.html.erb
+++ b/app/views/mountains/_my_mountains_form.html.erb
@@ -1,13 +1,13 @@
 <div class="my_mountains_form">	
 	<div class="want_to_go">
-		<% if @mymountains.where("user_id = ? AND type = ?", current_user.id, 0).first %>
+		<% if @mymountains.where("user_id = ? AND type = ?", current_user.id, MyMountainRole::WANTTOGO).first %>
 			<%= render 'mountains/undo_want_to_go' %> 
 		<% else %>
 			<%= render 'mountains/want_to_go' %>
 		<% end %>
 	</div>
 	<div class="ive_been">
-		<% if @mymountains.where("user_id = ? AND type = ?", current_user.id, 1).first %>
+		<% if @mymountains.where("user_id = ? AND type = ?", current_user.id, MyMountainRole::HAVEBEEN).first %>
 			<%= render 'mountains/undo_ive_been' %>
 		<% else %>
 			<%= render 'mountains/ive_been' %>
