--- a/app/views/mountains/_want_to_go.html.erb
+++ b/app/views/mountains/_want_to_go.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @mountain.my_mountains.build, remote: true do |f| %>
 	<%= f.hidden_field :mountain_id %>
-	<%= f.hidden_field :type, :value => 0 %>
+	<%= f.hidden_field :type, :value => MyMountainRole::WANTTOGO %>
 	<%= button_tag(type: 'submit', class: 'btn btn-mini') do %>
 		<i class="icon-plane icon-white"></i>  I Want to Go Here
 	<% end %> 
