--- a/app/views/shared/_pics.html.erb
+++ b/app/views/shared/_pics.html.erb
@@ -5,4 +5,5 @@
 			<%= link_to photo.name, [photo.mountain, photo] %> -- <%= photo.gnars.count %>
 		</div>
 	<% end %>
+	<%= will_paginate @photos %>
 </ul>
