--- a/app/views/users/_credentials_form.html.erb
+++ b/app/views/users/_credentials_form.html.erb
@@ -1,18 +1,12 @@
-<%= semantic_form_for(@user, :url => { :action => "update_password"}) do |f| %>
-	<%= f.semantic_errors :notice %>
-	<%= f.inputs do %>
-		<%= f.input :email %>
-		<%= f.input :current_password %>
-  	<%= f.input :password, autocomplete: "off", label: "New Password" %>
-  	<%= f.input :password_confirmation, label: "New Password Confirmation" %>
-  <% end %>
-  <%= f.actions do %>
-		<%= f.action :submit, :as => :button %>
- 	<% end %> 
+<%= simple_form_for(@user, :url => { :action => "update_password"}) do |f| %>
+	<%= f.input :email %>
+	<%= f.input :current_password %>
+  <%= f.input :password, autocomplete: "off", label: "New Password" %>
+  <%= f.input :password_confirmation, label: "New Password Confirmation" %>
+  <%= f.button :submit %>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h4>Cancel my account</h4>
+<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
+<p><%= link_to "Back", :back %></p>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
-
-<%= link_to "Back", :back %>
