--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,13 +2,15 @@
 <h1><%= @user.name %></h1>
 <div class="user_photo center"> <%= user_image(@user, "img-circle img-polaroid", 100) %> </div>
 <div class="center"><%= if current_user then link_to "Edit User", edit_user_path(current_user) end %></div>
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs" id="userTabs">
   <li class="active"><a href="#user_pics" data-toggle="tab">Pics</a></li>
   <li><a href="#user_bio" data-toggle="tab">Bio</a></li>
   <li><a href="#user_slopes" data-toggle="tab">My Slopes</a></li>
+  <li><a href="#gnar_pics" data-toggle="tab">Favorites</a></li>
 </ul>
 <div class="tab-content">
   <div class="tab-pane active" id="user_pics"><%= render 'shared/pics' %></div>
   <div class="tab-pane" id="user_bio"><%= render 'users/user_bio' %></div>
   <div class="tab-pane" id="user_slopes"><%= render 'users/user_slopes' %></div>
+  <div class="tab-pane" id="gnar_pics"><%= render 'users/gnar_pics' %></div>
 </div>
