adding facebook sign in and updating want to go functionality

--- a/app/views/mountains/_ive_been.html.erb
+++ b/app/views/mountains/_ive_been.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @mountain.my_mountains.build, remote: true do |f| %>
 	<%= f.hidden_field :mountain_id %>
-	<%= f.hidden_field :type, :value => MyMountainRole::HAVEBEEN %>
+	<%= f.hidden_field :role_type, :value => MyMountainRole::HAVEBEEN %>
 	<%= button_tag(type: 'submit', class: 'btn btn-mini') do %>
 		<i class="icon-ok icon-white"></i> I've Been Here
 	<% end %>
