--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,7 @@
 <% provide(:title, 'Sign up') %>
+<h2>Sign up with Facebook</h2>
+<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
