--- a/app/views/mountains/_undo_ive_been.html.erb
+++ b/app/views/mountains/_undo_ive_been.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@mountain.my_mountains.find_by_user_id(current_user.id), html: { method: :delete}, remote: true) do |f| %>
-	<%= f.hidden_field :type, :value => MyMountainRole::HAVEBEEN %>
+	<%= f.hidden_field :role_type, :value => MyMountainRole::HAVEBEEN %>
 		<%= button_tag(type: 'submit', class: 'btn btn-warning btn-mini') do %>
 		<i class="icon-ok icon-white"></i> I've Been Here
 	<% end %>
