--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Sign up') %>
 <h2>Sign up with Facebook</h2>
-<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), id: "sign_in" %>
 
 <h2>Sign up</h2>
 
