--- a/app/views/photos/_tags_form.html.erb
+++ b/app/views/photos/_tags_form.html.erb
@@ -3,5 +3,5 @@
 <% end %>
 
 <script type="text/javascript">
-	$("#photo_tag_list").select2({tags:[]});
+	$("#photo_tag_list").select2({tags:[], width: 'resolve' });
 </script>
