--- a/app/views/photos/_gnar.html.erb
+++ b/app/views/photos/_gnar.html.erb
@@ -1,4 +1,4 @@
 <%= form_for(@photo.gnars.build, :remote => true) do |f| %>
 	<%= f.hidden_field :photo_id %>
-	<%= f.submit "Give Gnar", class: "btn btn-large btn-primary gnar_describe", :title => "Give props to this photo and vote it up"%>
+	<%= f.submit "Give Gnar", class: "btn btn-large btn-primary btn-block gnar_describe", :title => "Give props to this photo and vote it up"%>
 <% end %>
