--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,8 @@
 <% if user_signed_in? %> 
-	<h3>Home</h3>
-		<div class="row">
-			<%= render 'shared/mountains_list' %>
-		</div>
+	<h3>Hottest Pics</h3>
+	<div class="row">
+		<%= render 'shared/pics' %>
+	</div>
 <% else %> 
 <div class="span6 offset6 text-center top-spacing-medium">
 	<div class="well see-through">
