URLs updated for mountain and region

--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -6,3 +6,6 @@
   <div class="tab-pane active" id="upload"><%= render 'form_upload' %></div>
   <div class="tab-pane" id="weblink"><%= render 'form_weblink' %></div>
 </div>
+<script type="text/javascript">
+	$("#photo_tag_list").select2({tags:[], width: 'resolve' });
+</script>
