--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -64,3 +64,24 @@ body.landing_page {
 		-webkit-margin-end: 0px;
 	}	
 }
+ 
+/* PHOTO UPDATES */
+.photo-with-text {
+	position: relative;
+  margin: 0 auto;
+  display: table;
+}
+.photo-text {
+	position: absolute;
+	bottom: 4px;
+	right: 4px;
+	background: #000;
+	background: rgba(0,0,0,0.65);
+	width: 180px;
+	padding-left: 10px;
+	padding-right: 10px;
+	height: 40px;
+}
+.thumbnail {
+	margin-bottom: 20px;
+}
