--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -41,7 +41,7 @@
 				<p><strong>Region:</strong> <%= link_to @photo.mountain.region.name, @photo.mountain.region %></p>
 				<% if @photo.description.length > 0 || current_user == @photo_user then %>
 					<p><strong>About the Photo:</strong> <%= @photo.description %>
-					<% if @photo.description.length == 0 then link_to "Edit Description", edit_mountain_photo_path(@mountain, @photo) end %>
+					<%= unless @photo.description.present? then link_to "Add a description", edit_mountain_photo_path(@mountain, @photo) end %>
 					</p>
 				<% end %>
 				<% if @photo.tag_list.length > 0 || current_user == @photo_user then %>
