--- a/app/views/shared/_pics.html.erb
+++ b/app/views/shared/_pics.html.erb
@@ -4,7 +4,12 @@
 			<li class="span3">
 				<div class="thumbnail photo-with-text">
 					<%= link_to image_tag(photo.image_url(:thumb)), [photo.mountain, photo]%>
-					<div class="photo-text"><%= link_to photo.name, [photo.mountain, photo]%></div>
+					<div class="photo-text">
+						<p><strong><%= link_to photo.name, [photo.mountain, photo]%></strong></p>
+						<% if photo.user.present? then %>
+							<p><em>Photo by:</em> <%= link_to photo.user.name, photo.user %></p>
+						<% end %>
+					</div>
 				</div>
 			</li>
 		</div>
