--- a/app/views/mountains/_info.html.erb
+++ b/app/views/mountains/_info.html.erb
@@ -2,6 +2,9 @@
 	<% if @mountain.description.present? then %>
 		<dt>About:</dt> <dd><%= @mountain.description.html_safe %></dd>
 	<% end %><br>
+	<% if @mountain.stats.present? then %>
+		<dt>Stats:</dt> <dd><%= @mountain.stats.html_safe %></dd>
+	<% end %><br>
 	<% if @mountain.phone.present? then %>
 		<dt>Phone:</dt> <dd><%= @mountain.phone %></dd>
 	<% end %><br>
