three ux bug fixes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,6 +17,9 @@ $greytext: #F0F0F0;
 .row {
 	margin-left: 0px;
 }
+.alert{
+	margin-left: 20px;
+}
 
 /* HEADER UPDATES */
 @media (min-width: 979px) {
