minor css updates

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -350,3 +350,11 @@ html, body {
   width: 76% !important;
   overflow: hidden;
 }
+
+/* ALL MOUNTAINS PAGE */
+.region-thumbnail {
+	border: none;
+	webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
