--- a/app/views/static_pages/all_mountains.html.erb
+++ b/app/views/static_pages/all_mountains.html.erb
@@ -3,7 +3,7 @@
 	<div class="row-fluid">
 		<ul class="thumbnails">
 			<% @regions.each do |region| %>
-				<div class="span4">
+				<div class="span4 thumbnail region-thumbnail">
 					<h2><%= link_to region.name + " Region", region %></h2>
 					<ul>
 						<% region.mountains.each do |mountain| %>
