--- a/app/views/static_pages/all_mountains.html.erb
+++ b/app/views/static_pages/all_mountains.html.erb
@@ -1,17 +1,15 @@
 <% provide(:title, "All Mountains") %>
 <div class="container">
-	<div class="row-fluid">
-		<ul class="thumbnails">
-			<% @regions.each do |region| %>
-				<div class="span4 thumbnail region-thumbnail">
-					<h2><%= link_to region.name + " Region", region %></h2>
-					<ul>
-						<% region.mountains.each do |mountain| %>
-							<li><%= link_to mountain.name, mountain %></li>
-						<% end %> 
-					</ul>
-				</div>
-			<% end %>
-		</ul>
-	</div>
+	<ul class="thumbnails">
+		<% @regions.each do |region| %>
+			<div class="span4 thumbnail region-thumbnail">
+				<h2><%= link_to region.name, region %></h2>
+				<ul>
+					<% region.mountains.each do |mountain| %>
+						<li><%= link_to mountain.name, mountain %></li>
+					<% end %> 
+				</ul>
+			</div>
+		<% end %>
+	</ul>
 </div>
