footer link to MN Web Dev

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
 				<div class="row-fluid">
 				  <div class="span3">
 					  <small>
-					    A site by <a href="http://about.me/mitchnick" target="_blank">Mitch Nick</a>.
+					    A site by <a href="http://www.mnwebdev.com" target="_blank">Mitch Nick</a>.
 					  </small>
 					</div>
 					<div class="span9">
